// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Receipt Contributions should render a contribution with collective currency !== host currency 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <td>
          Date
        </td>
        <td>
          Description
        </td>
        <td>
          QTY
        </td>
        <td>
          Unit Price
        </td>
        <td>
          Tax
        </td>
        <td>
          Net Amount
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          2020-01-01
        </td>
        <td>
          <a
            href="https://opencollective.com/babel"
          >
            Contribution to babel
          </a>
        </td>
        <td>
          1
        </td>
        <td>
          €100.00
          <p>
            (
            $109.16
             x 
            0.9161
            %)
          </p>
        </td>
        <td>
          -
        </td>
        <td>
          €100.00
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <div>
      <hr />
      <div>
        <div>
          Subtotal
          <span>
            EUR €100.00
          </span>
        </div>
      </div>
      <div>
        TOTAL
        <span>
          EUR €100.00
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Receipt Contributions should render with a simple contribution 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <a
              href="https://opencollective.com/europe"
            >
              <h1>
                Open Collective Europe
              </h1>
            </a>
            <div>
              <span>
                123 Law Street, 1000 Bruxelles
                <br />
              </span>
              Belgium
            </div>
            <a
              href="https://opencollective.com/europe"
            >
              https://opencollective.com/
              europe
            </a>
          </div>
          <div>
            <h2>
              Bill to
            </h2>
            <div>
              <p>
                Super Organization Inc.
              </p>
              <span>
                Rue de Rivoli
                <br />
              </span>
              France
              <p>
                VAT
                : 
                FR123456789
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <h2>
              Payment Receipt
            </h2>
            <div />
            <div>
              <div>
                <div>
                  Reference: europe_4c8f436a-8aa6-11ee-bc7e-4ce17342669c
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <table>
          <thead>
            <tr>
              <td>
                Date
              </td>
              <td>
                Description
              </td>
              <td>
                QTY
              </td>
              <td>
                Unit Price
              </td>
              <td>
                Tax
              </td>
              <td>
                Net Amount
              </td>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                2020-01-01
              </td>
              <td>
                <a
                  href="https://opencollective.com/babel"
                >
                  Contribution to babel
                </a>
              </td>
              <td>
                1
              </td>
              <td>
                €100.00
              </td>
              <td>
                -
              </td>
              <td>
                €100.00
              </td>
            </tr>
          </tbody>
        </table>
        <div>
          <div>
            <hr />
            <div>
              <div>
                Subtotal
                <span>
                  EUR €100.00
                </span>
              </div>
            </div>
            <div>
              TOTAL
              <span>
                EUR €100.00
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <p />
        </div>
        <div>
          <div>
            <a>
              <img
                src="https://opencollective.com/proxy/images?src=https%3A%2F%2Fimages.opencollective.com%2Feurope%2Fa2f2aabc-8aa6-11ee-ad3e-4ce17342669c%2Flogo.png&height=200"
              />
            </a>
          </div>
          <div>
            <p>
              OC Europe
            </p>
            <p>
              <span>
                123 Law Street, 1000 Bruxelles
                <br />
              </span>
              Belgium
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Receipt should render with no transactions 1`] = `
<div>
  No transaction to render
</div>
`;
